lior up - 8.5 18:00 - final version !!!!!!

--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
             <div class="form-group">
                 <div class="page-header">
                     <p class="lead text-center">
-                        <i class="glyphicon glyphicon-log-in"></i> Welcome To Account Login Panel
+                        <i class="glyphicon glyphicon-log-in"></i> <h1>Welcome To Account Login Panel</h1>
+                        <br>
                     </p>
                 </div>
                 <form id="loginForm" class="form-horizontal col-xs-4 col-xs-offset-4" role="form" method="post"
                       action="">
-                    <label for="loginUserName">User Name</label>
+                    <label for="loginUserName"> <h3>User Name</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-user"></i>
@@ -74,7 +75,7 @@
                         <input class="form-control" id="loginUserName" placeholder="User Name" type="text"
                                name="loginUserName">
                     </div>
-                    <label for="loginPassword">Password</label>
+                    <label for="loginPassword"> <h3>Password</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-lock"></i>
@@ -95,17 +96,15 @@
     <section id="registerSection" class="registerClass">
         <div class="container">
             <div class="form-group">
-
-                <br><br>
                 <div class="page-header">
                     <p class="lead text-center">
-                        <i class="glyphicon glyphicon-log-in"></i> Welcome To Account register Panel
+                        <i class="glyphicon glyphicon-log-in"></i><h1>Welcome To Account register Panel</h1>
                     </p>
                 </div>
-
+                <br>
                 <form id="lregisterForm" class="form-horizontal col-xs-4 col-xs-offset-4" role="form" method="post"
                       action="">
-                    <label for="loginUserName">User Name</label>
+                    <label for="loginUserName"> <h3>User Name</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-user"></i>
@@ -113,7 +112,7 @@
                         <input class="form-control" id="registerUserName" placeholder="User Name" type="text"
                                name="loginUserName">
                     </div>
-                    <label for="loginPassword">Password</label>
+                    <label for="loginPassword"> <h3>Password</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-lock"></i>
@@ -122,7 +121,7 @@
                                name="loginPassword">
                     </div>
 
-                    <label for="loginPassword">First Name</label>
+                    <label for="loginPassword"> <h3>First Name</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-lock"></i>
@@ -131,7 +130,7 @@
                                name="loginPassword">
                     </div>
 
-                    <label for="loginPassword">Last Name</label>
+                    <label for="loginPassword"> <h3>Last Name</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-lock"></i>
@@ -140,7 +139,7 @@
                                name="loginPassword">
                     </div>
 
-                    <label for="loginPassword">Email</label>
+                    <label for="loginPassword"> <h3>Email</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-lock"></i>
@@ -149,7 +148,7 @@
                                name="loginPassword">
                     </div>
 
-                    <label for="loginPassword">Birth Day</label>
+                    <label for="loginPassword"> <h3>Birth Day</h3></label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-lock"></i>
@@ -170,14 +169,13 @@
     <section id="aboutSection" class="aboutClass">
         <div id="aboutBotInTop" class="aboutBox">
             <div id="aboutBoxHeader" class="aboutBox">
-                <h2>  About Us </h2>
+                <h1>  About Us </h1>
             </div>
+            <br>
             <div id="aboutBoxbody" class="aboutBox">
-                Created by Samuel and Lior <br>
-                The jQuery we use in this assignment is Google's jquery.min.js
-
-                The main challenge in this assignment was definitely to deal with the learning of a new <br>
-                language.
+                <h3>Created by Samuel and Lior </h3>
+                <h3> The jQuery we use in this assignment is Google's jquery.min.js</h3>
+                <h3>The main challenge in this assignment was definitely to deal with the learning of a new language.</h3>
             </div>
         </div>
     </section>
@@ -186,7 +184,7 @@
         <div id="preGameArea" class="preGameAreaClass">
             <div id="preGameArea1" class="preGameAreaClass2">
                 <form id="preGameForm" class="preGameFormClass">
-                    <label for="numberOfBalls">Number of balls: (50-90)</label>
+                    <label for="numberOfBalls"> <h3> Number of balls: (50-90)</h3> </label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-menu-right"></i>
@@ -195,7 +193,7 @@
                                name="numberOfBalls">
                     </div>
 
-                    <label for="gameDuration">Game duration: (60+)</label>
+                    <label for="gameDuration"> <h3>Game duration: (60+)</h3> </label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-menu-right"></i>
@@ -204,7 +202,7 @@
                                name="gameDuration">
                     </div>
 
-                    <label for="numberOfMonsters">Number of monsters: (1-4)</label>
+                    <label for="numberOfMonsters"> <h3>Number of monsters: (1-4)</h3> </label>
                     <div class="input-group">
                         <div class="input-group-addon">
                             <i class="glyphicon glyphicon-menu-right"></i>
@@ -226,9 +224,10 @@
 
     <section id="preGameSection1" class="preGameClass1">
         <div class="pageHeader">
-            <p id="preGameTitle"> Welcome To Pre Game Panel</p>
-            <p id="preGameinstractions1"> please choose game control settings:</p>
-            <p id="preGameinstractions2"> you have two options:  -custom control  -default control</p>
+            <p id="preGameTitle"> <h1>Welcome To Pre Game Panel</h1> </p>
+            <br>
+            <p id="preGameinstractions1"> <h3>please choose game control settings:</h3> </p>
+            <p id="preGameinstractions2"> <h3>you have two options:  -custom control  -default control</h3></p>
         </div>
         <br>
         <div class="form-row">
@@ -249,15 +248,15 @@
         <div id="gameInfo" class="gameHeaderClass" align="center">
             <h4>User:</h4>
             <h5 id="userName"></h5>
-            <h5>SCORE:</h5>
+            <h3>SCORE:</h3>
             <input id="lblScore" type="text"/>
 
-            <h4>TIME Paste:</h4>
+            <h3>TIME Paste:</h3>
             <input id="lblTimePaste" type="text"/>
-            <h4>TIME LEFT:</h4>
+            <h3>TIME LEFT:</h3>
             <input id="lblTimeLeft" type="text"/>
 
-            <h4>Lives</h4>
+            <h3>Lives</h3>
             <h5 id="lives"></h5>
             <input id="lbllives" type="text"/>
         </div>
